# GenAi-python

./: .env  main.py  pyproject.toml  readme.md
